rtg_tests/negative/unaddressable_array_call/go.mod
module example.com/rtgtests/negative/unaddressable_array_call

go 1.25
